--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,9 +20,9 @@
                 <div class="header-info">
                     <h1>Shivam Prasad</h1>
                     <p>
-                        <svg xmlns="http://www.w3.org/2000/svg" x="2px" y="2px" width="25" height="15" viewBox="0 0 48 48">
-                            <path fill="#0288D1" d="M42,37c0,2.762-2.238,5-5,5H11c-2.761,0-5-2.238-5-5V11c0-2.762,2.239-5,5-5h26c2.762,0,5,2.238,5,5V37z"></path><path fill="#FFF" d="M12 19H17V36H12zM14.485 17h-.028C12.965 17 12 15.888 12 14.499 12 13.08 12.995 12 14.514 12c1.521 0 2.458 1.08 2.486 2.499C17 15.887 16.035 17 14.485 17zM36 36h-5v-9.099c0-2.198-1.225-3.698-3.192-3.698-1.501 0-2.313 1.012-2.707 1.99C24.957 25.543 25 26.511 25 27v9h-5V19h5v2.616C25.721 20.5 26.85 19 29.738 19c3.578 0 6.261 2.25 6.261 7.274L36 36 36 36z"></path>
-                            </svg>: <a href="https://linkedin.com/in/shivam-prasad-8a3920269" target="_blank">LinkedIn</a></p>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#0077b5" viewBox="0 0 24 24">
+                            <path d="M22.23 0H1.77C.792 0 0 .774 0 1.723v20.554C0 23.227.792 24 1.77 24h20.46c.978 0 1.77-.774 1.77-1.723V1.723C24 .774 23.208 0 22.23 0zM7.119 20.452H3.563V9.035h3.556v11.417zM5.341 7.616c-1.138 0-2.062-.936-2.062-2.094 0-1.158.924-2.094 2.062-2.094 1.14 0 2.064.936 2.064 2.094 0 1.158-.924 2.094-2.064 2.094zm15.111 12.836h-3.559v-5.592c0-1.331-.026-3.043-1.854-3.043-1.854 0-2.14 1.447-2.14 2.942v5.693h-3.557V9.035h3.418v1.554h.047c.475-.897 1.636-1.843 3.368-1.843 3.6 0 4.268 2.369 4.268 5.453v6.253z"/>
+                        </svg>: <a href="https://linkedin.com/in/shivam-prasad-8a3920269" target="_blank">LinkedIn</a></p>
                         📧: <a href="mailto:shivamprasad012@gmail.com">shivamprasad012@gmail.com</a> | 
                         📞: <a href="tel:+919142798200">(+91) 9142798200</a>
                     </p>
@@ -31,23 +32,23 @@
 
         <section>
             <h2>Profile</h2>
-            <p>Shivam Prasad Third-Year undergrad. B.Tech Computer Science Engineering Student KIIT University As a passionate B.Tech Computer Science Engineering student eager to embark on a career in Full-Stack development, I bring a strong foundation in programming languages and a deep enthusiasm for the digital world. While I am still building professional experience, I am a quick learner and highly motivated to contribute to innovative technology solutions.</p>
+            <p>Shivam Prasad, Third-Year undergrad B.Tech Computer Science Engineering Student at KIIT University. As a passionate aspiring Full-Stack developer, I bring a strong foundation in programming languages and a deep enthusiasm for technology. While I am still building professional experience, I am a quick learner and highly motivated to contribute to innovative solutions.</p>
         </section>
 
         <section>
             <h2>Experience</h2>
             <div class="experience-item">
                 <h3>Full-Stack Developer</h3>
-                <p>HCL Company. (2024 - Present)</p>
+                <p>HCL Company (2024 - Present)</p>
                 <ul>
                     <li>Developed and implemented a user-friendly Money Tracker application.</li>
                     <li>Designed database schemas to store application data using MongoDB.</li>
-                    <li>Created back-end services for data manipulation and bussiness logic using Node.js.</li>
+                    <li>Created back-end services for data manipulation and business logic using Node.js.</li>
                 </ul>
             </div>
             <div class="experience-item">
                 <h3>Web Developer</h3>
-                <p>OctaNet Services Pvt Ltd. (2023 - 2024)</p>
+                <p>OctaNet Services Pvt Ltd (2023 - 2024)</p>
                 <ul>
                     <li>Created a visually appealing Landing Page Design.</li>
                     <li>Implemented measures to enhance performance on multiple platforms.</li>
@@ -58,9 +59,11 @@
 
         <section>
             <h2>Education</h2>
-            <p>Bachelor of Science in Computer Science - KIIT University (2022-2026)</p>
-            <p>Intermediate Education - NATIONAL PUBLIC WELFARE INTER COLLEGE CHISTIPATTI HAFFIZPUR (2020 - 2021)</p>
-            <P>DE NOBILI SCHOOL - C.M.R.I.  (2018 - 2019)</P>
+            <ul>
+                <li>Bachelor of Technology in Computer Science - KIIT University (2022-2026)</li>
+                <li>Intermediate Education - National Public Welfare Inter College (2020 - 2021)</li>
+                <li>De Nobili School - C.M.R.I. (2018 - 2019)</li>
+            </ul>
         </section>
 
         <section>
@@ -74,10 +77,25 @@
                 <li>SQL</li>
             </ul>
         </section>
+
+        <section>
+            <h2>Projects</h2>
+            <ul>
+                <li>
+                    <strong>Money Tracker App</strong> - Developed a financial tracking app with full-stack technologies.
+                </li>
+                <li>
+                    <strong>Responsive Portfolio</strong> - Designed a fully responsive personal website showcasing work.
+                </li>
+            </ul>
+        </section>
+
         <section>
             <h2>Languages</h2>
-            <li>English</li>
-            <li>Hindi</li>
+            <ul>
+                <li>English</li>
+                <li>Hindi</li>
+            </ul>
         </section>
     </div>
 </body>
