--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
                 <li>Version Control (Git)</li>
                 <li>Responsive Web Design</li>
                 <li>Database Management (MongoDB)</li>
-                <li>SQL</li>
+                <li>Data Structure</li>
+                <li>Kali Linux</li>
+                
             </ul>
         </section>
 
