--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
         <section>
             <h2>Skills</h2>
             <ul>
+                <li>C/C++</li>
+                <li>JAVA</li>
+                <li>Python</li>
                 <li>HTML, CSS, JavaScript</li>
                 <li>React, Node.js</li>
                 <li>Version Control (Git)</li>
